corrected file name

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <a href="#bg3" class="link__item">Vodka</a>
                 </div>
             </div>
-            <img src="slike/logo.png" alt="Loading logo...">
+            <img src="images/logo.png" alt="Loading logo...">
             <div class="d-flex align-items-center">
                 <a class="link__item" href="#bg4">RECIPES</a>
             </div>
@@ -48,7 +48,7 @@
 
                 </div>
                 <div class="romb mt-5 pt-5 d-flex justify-content-center">
-                    <img src="slike/romb veliki.png">
+                    <img src="images/romb veliki.png">
                 </div>
 
             </div>
@@ -57,7 +57,7 @@
     <div class="container p-5 bg-dark text-white" id="bg2">
         <div class="row gx-3">
             <div class="col m-5 text-center">
-                <img class="img" src="slike/Image 1.png">
+                <img class="img" src="images/Image 1.png">
             </div>
             <div class="col m-5 text-center align-self-center p-3">
                 <div>
@@ -65,9 +65,9 @@
                     <p> Description Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit deserunt soluta eaque illum reiciendis ad placeat expedita excepturi.
                     </p>
                     <ul class="list-inline paragraph">
-                        <li class="list-inline-item"><img src="slike/romb mali.png"> 0.7l and 0.33l</li>
-                        <li class="list-inline-item"><img src="slike/romb mali.png"> 36% vol.</li>
-                        <li class="list-inline-item"><img src="slike/romb mali.png"> Berlin Spirit</li>
+                        <li class="list-inline-item"><img src="images/romb mali.png"> 0.7l and 0.33l</li>
+                        <li class="list-inline-item"><img src="images/romb mali.png"> 36% vol.</li>
+                        <li class="list-inline-item"><img src="images/romb mali.png"> Berlin Spirit</li>
                     </ul>
                     <button class="button yellow px-5" onclick="location.href='#bg4'">RECIPES</button>
                 </div>
@@ -83,9 +83,9 @@
                     <p class="paragraph"> Description Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit deserunt soluta eaque illum reiciendis ad placeat expedita excepturi.
                     </p>
                     <ul class="list-inline paragraph">
-                        <li class="list-inline-item"><img src="slike/romb plavi.png"> 0.7l and 0.33l</li>
-                        <li class="list-inline-item"><img src="slike/romb plavi.png"> 36% vol.</li>
-                        <li class="list-inline-item"><img src="slike/romb plavi.png">  Berlin Spirit</li>
+                        <li class="list-inline-item"><img src="images/romb plavi.png"> 0.7l and 0.33l</li>
+                        <li class="list-inline-item"><img src="images/romb plavi.png"> 36% vol.</li>
+                        <li class="list-inline-item"><img src="images/romb plavi.png">  Berlin Spirit</li>
                     </ul>
                     <button class="button blue px-5" onclick="location.href='#bg4'">RECIPES</button>
                 </div>
@@ -104,7 +104,7 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="card" style="border: none; border-radius: 0%;">
-                    <img src="slike/recipe 1.png" alt="Green coctail with vodka" class="card-img-top">
+                    <img src="images/recipe 1.png" alt="Green coctail with vodka" class="card-img-top">
                     <div class="card-body" style="background-color: #151716;">
                         <h5 class="card-title">Coctail name 1</h5>
                         <p class="card-text">Based on DeFacto Vodka.</p>
@@ -113,7 +113,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card" style="border: none; border-radius: 0%;">
-                    <img src="slike/recipe 2.png" alt="Image of coctail based on gin" class="card-img-top">
+                    <img src="images/recipe 2.png" alt="Image of coctail based on gin" class="card-img-top">
                     <div class="card-body" style="background-color: #151716;">
                         <h5 class="card-title">Coctail name 2</h5>
                         <p class="card-text">Based on DeFacto Gin.</p>
@@ -122,7 +122,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card" style="border: none; border-radius: 0%;">
-                    <img src="slike/recipe 3.png" alt="Image of coctail with krauterbitter" class="card-img-top">
+                    <img src="images/recipe 3.png" alt="Image of coctail with krauterbitter" class="card-img-top">
                     <div class="card-body" style="background-color: #151716;">
                         <h5 class="card-title">Coctail name 3</h5>
                         <p class="card-text">Based on DeFacto Krauterbitter.</p>
